# picoprobe-portal

./: .gitignore  Makefile  README.md  setup.cfg
picoprobe_portal/: apps.py  fields.py  urls.py  views.py
picoprobe_portal/templates/picoprobe/globus-portal-framework/v2/: detail-base.html  detail-overview.html  example-view.html  search-about.html
picoprobe_portal/templates/picoprobe/globus-portal-framework/v2/components/: detail-dc-metadata.html  search-results.html
requirements/: requirements.txt
testing/: settings.py  urls.py  wsgi.py
tests/: test_picoprobe_portal.py
