[metadata]
name = picoprobe_portal
version = attr: picoprobe_portal.__version__
description = Collate data from Globus Search for easy discovery and transfer
long_description = file:README.md
long_description_content_type=text/markdown

url = https://github.com/ramanathanlab/picoprobe-portal
author = Alexander Brace, Rafael Vescovi, Arvind Ramanathan, Nestor Zaluzec, Ian Foster
author_email = abrace@uchicago.edu

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    test
    docs

[flake8] 
exclude = .git
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231
max-complexity = 14

[tool:pytest]
# https://docs.pytest.org/en/stable/customize.html
addopts = -x
junit_family=xunit1
filterwarnings =
    ignore::DeprecationWarning

[mypy]
show_error_codes = True
check_untyped_defs = True
follow_imports = normal
strict_optional = True
#plugins = pydantic.mypy
strict = True
disallow_untyped_defs = True
disable_error_code = override
